# signa

./: pyproject.toml
chapter_01/: chapter_01_basic_nn_in_pytorch.ipynb  experimenting_nn.py
chapter_10/: chapter_10_seq2seq_lstm.ipynb
experimenting/: ex1_simple_nn.py  ex2_simple_nn_w_lightning copy.py  ex3_titanic.py  ex4_house.py  ex5_house_embedding.py
experimenting/houses/: houses_predictions.csv
experimenting/titanic/: mariona.csv  titanic_predictions.csv
